feat: create brianlovin hn extension

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,28 +1,13 @@
 {
-  "name": "Extension Starter Kit",
+  "name": "Brian HN",
   "background": {
     "scripts": ["background.bundle.js"]
   },
-  "permissions": ["storage"],
+  "permissions": ["webNavigation"],
   "manifest_version": 2,
   "icons": {
     "16": "icon-16.png",
     "48": "icon-48.png",
     "128": "icon-128.png"
-  },
-  "browser_action": {
-    "default_icon": "icon-16.png",
-    "default_title": "Extension Starter Kit",
-    "default_popup": "popup.html"
-  },
-  "options_ui": {
-    "page": "options.html",
-    "open_in_tab": true
-  },
-  "content_scripts": [
-    {
-      "matches": ["*://example.com/"],
-      "js": ["example.bundle.js"]
-    }
-  ]
+  }
 }
