--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,5 +9,9 @@
     "16": "icon-16.png",
     "48": "icon-48.png",
     "128": "icon-128.png"
+  },
+  "browser_action": {
+    "default_icon": "icon-16.png",
+    "default_title": "Brian HN"
   }
 }
